--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/libgit2/objective-git.git
 [submodule "Sparkle"]
 	path = Sparkle
-	url = https://github.com/rowanj/Sparkle.git
+	url = https://github.com/sparkle-project/Sparkle.git
 [submodule "SyntaxHighlighter"]
 	path = SyntaxHighlighter
 	url = git://github.com/alexgorbatchev/SyntaxHighlighter.git
